--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,34 @@
-flask==3.0.0
-gunicorn==21.2.0
-requests==2.32.3
-pandas==2.2.0
-numpy==1.26.0
-scikit-learn==1.3.2
-nltk==3.8.1
-Sastrawi==1.0.1
-matplotlib==3.8.0
-seaborn==0.13.0
-wordcloud==1.9.3
-openpyxl==3.1.2
-python-dotenv==1.0.0
+# Web Framework
+Flask
+gunicorn
+Werkzeug
+Jinja2
+itsdangerous
+click
+blinker
+
+# Scraping & HTTP
+beautifulsoup4
+requests
+lxml
+soupsieve
+urllib3
+
+# Analisis Sentimen & NLP
+nltk
+Sastrawi
+textblob
+vaderSentiment
+
+# Data Science & Analisis
+pandas
+numpy
+scikit-learn
+scipy
+joblib
+matplotlib
+seaborn
+wordcloud
+
+# Lain-lain
+python-dotenv
